syntax = "proto3";

package sub2_api;

service SUB2 {
  rpc version (EmptyRequestArgs) returns (VersionResponse);
  rpc ping (EmptyRequestArgs) returns (SingleMessage);
  rpc echo (SingleMessage) returns (SingleMessage);
  rpc get_update(EmptyRequestArgs) returns (SingleMessage);
  rpc send_request(TdApiRequest) returns (SingleMessage);
}

message VersionResponse {
  string version = 1;
}

message SingleMessage {
  string message = 1;
}

message TdApiRequest {
  string extra_field = 1;
  string request = 2;
}
message EmptyRequestArgs {}